Commit #6 - upload and devise working, no filters, no sql constraints, no ID3 tags

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,8 @@
 <p>Find me in app/views/dashboard/index.html.erb</p>
 
 
-<audio id="player" src="D.mp3" type="audio/mpeg" controls="controls">
+<audio id="player" controls="controls">
+	<source src="#{Rails.root}/uploads/440Hz-5sec.mp3" type="audio/mpeg">
 	Not supported
 </audio>
 
