--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,11 +1,8 @@
 <h1>Dashboard#index</h1>
 <p>Find me in app/views/dashboard/index.html.erb</p>
 
+<%= audio_tag("#{Rails.root}/uploads/440Hz-5sec.mp3", :autoplay => false, :controls => true) %>
 
-<audio id="player" controls="controls">
-	<source src="#{Rails.root}/uploads/440Hz-5sec.mp3" type="audio/mpeg">
-	Not supported
-</audio>
 
 <hr>
 
