--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -1,5 +1,4 @@
 <%= form_for @song , url: {action: "create"} do |song|  %>
-	<%= song.hidden_field :user_id ,:user_id => current_user.id %>
 	<p>
 		<%= song.label :title %>
 		<%= song.text_field :title %>
@@ -15,6 +14,8 @@
 	<p>
 		<%= song.file_field :musicfile %>
 	</p>
+	<!-- this may be useless: -->
+	<%= song.hidden_field :user_id %>
 	<p> 
 		<%= song.submit  "Upload" %>		
 	</p>
