Commit #11 - everything works to do : 1.de modificat dashboard controller  - sa uploadeze fisierul inainte de a scrie in baza de date (citire cu taglib)  - sa se poata edita campurile unui song (+ edit.html.erb view)  - sa se poata sterge un song  - sa se poata fi downloadat un song de catre utilizatorul care l-a uploadat(cu taguri id3 editate pe site)  - sa verifice extensia fisieriului uploadat(sa fie mp3) 2.de modificat song model  - sa aiba urmatoarele campuri (compatibile cu id3v2):    -> album    -> album_artist    -> artist    -> bpm    -> comments    -> composer    -> genre    -> lyricist    -> original_artist    -> title    -> track (track_number)    -> lyrics    -> year    (nu trebuie neaparat sa le aiba pe toate, lista de mai sus este incompleta)  - sa existe constrangere de foreign key in schema bazei de date (many songs to one user) 3.de facut un fel de motor de cautare in home (+ show.html.erb) (query pe toate fisierele) Daca vreti putem sa mai facem un camp in baza de date, sa facem song-ul sa pata fi setat public sau private. 4.de facut un player audio (preferabil sa ruleze si cand se schimba pagina) Sau sa folosim unul gata facut 5.de facut o interfata frumoasa (cred ca am putea folosi gem-ul 'bootstrap-sass')

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,4 +8,39 @@
 
 <%= link_to "New" ,  new_dashboard_path %>
 
+<hr>
+
+<table border="1">
+	<tr>
+		<td>
+			title
+		</td>
+		<td>
+			album
+		</td>
+		<td>
+			artist
+		</td>
+		<td>
+			musicfile
+		</td>
+	</tr>
+<% @songs.each do |song| %>
+	<tr>
+		<td>
+			<%= song.title %>
+		</td>
+		<td>
+			<%= song.album %>
+		</td>
+		<td>
+			<%= song.artist %>
+		</td>
+		<td>
+			<%= song.musicfile %>
+		</td>
+	</tr>
+<% end %>
+</table>
+
 
