--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Dashboard#index</h1>
 <p>Find me in app/views/dashboard/index.html.erb</p>
 
-<%= audio_tag("#{Rails.root}/uploads/440Hz-5sec.mp3", :autoplay => false, :controls => true) %>
+<audio id="player" src="1.mp3" type="audio/mpeg" controls="controls">
+  Not supported
+</audio>
 
 
 <hr>
