--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,8 @@
  *
  *= require_self
  *= require_tree .
- *=require bootstrap
+ *= require bootstrap
+ *= require mediaelement_rails
  */
 
 @import "bootstrap";
