--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -12,37 +12,37 @@
 
 <hr>
 
-<table border="1">
+<table class="table table-hover">
 	<tr>
 		<td>
-			title
+			Title
 		</td>
 		<td>
-			album
+			Album
 		</td>
 		<td>
-			artist
+			Artist
 		</td>
 		<td>
-			genre
+			Genre
 		</td>
 		<td>
-			track
+			Track
 		</td>
 		<td>
-			year
+			Year
 		</td>
 		<td>
-			Edit
+			
 		</td>
 		<td>
-			Play
+			
 		</td>
 		<td>
-			Download
+			
 		</td>
 		<td>
-			Remove
+			
 		</td>
 	</tr>
 <% @songs.each do |song| %>
