--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,82 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Home</h1>
+
+<table border="1">
+	<tr>
+		<td>
+			title
+		</td>
+		<td>
+			album
+		</td>
+		<td>
+			artist
+		</td>
+		<td>
+			genre
+		</td>
+		<td>
+			track
+		</td>
+		<td>
+			year
+		</td>
+		<td>
+			Edit
+		</td>
+		<td>
+			Play
+		</td>
+		<td>
+			Download
+		</td>
+		<td>
+			Remove
+		</td>
+	</tr>
+<% @songs.each do |song| %>
+	<tr>
+		<td>
+			<%= song.title %>
+		</td>
+		<td>
+			<%= song.album %>
+		</td>
+		<td>
+			<%= song.artist %>
+		</td>
+		<td>
+			<%= song.genre %>
+		</td>
+		<td>
+			<%= song.track %>
+		</td>
+		<td>
+			<%= song.year %>
+		</td>
+		<td>
+			<%= link_to "Edit", edit_dashboard_path(song.id) %>
+		</td>
+		<td>
+			<%= link_to "Play", dashboard_path(song.id) %>
+		</td>
+
+		<td>
+			<%= link_to "Download", "/dashboard/download?id=#{song.id}" %>
+		</td>
+		<td>
+			<%= link_to "Destroy", dashboard_path(song.id) , :method => :delete  %>
+		</td>
+	</tr>
+<% end %>
+</table>
+
+
+<div>
+	<%= form_tag("/home/find", method: "get") do %>
+		<%= label_tag(:q, "Search for:") %>
+		<%= text_field_tag(:word) %>
+		<%= submit_tag "Find" %>
+	<% end %>
+
+
+</div>
