--- a/app/views/dashboard/_find.html.erb
+++ b/app/views/dashboard/_find.html.erb
@@ -1,35 +1,37 @@
 <table class="table table-hover">
 	<tr>
-		<td>
-			title
+		<td><b>
+			Title
+		</b>
 		</td>
-		<td>
-			album
+		
+		<td><b>
+			Album
+		</b>
 		</td>
-		<td>
-			artist
+		
+		<td><b>
+			Artist
+		</b>
 		</td>
-		<td>
-			genre
+		
+		<td><b>
+			Genre
+		</b>
 		</td>
-		<td>
-			track
+		
+		<td><b>
+			Track
+		
+		<td><b>
+			Year
+		</b>
 		</td>
-		<td>
-			year
-		</td>
-		<td>
-			Edit
-		</td>
-		<td>
-			Play
-		</td>
-		<td>
-			Download
-		</td>
-		<td>
-			Remove
-		</td>
+		
+		<td></td>
+		<td></td>
+		</td></td>
+		<td></td>
 	</tr>
 <% @songs.each do |song| %>
 	<tr>
