--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,15 @@
-<h1>About#index</h1>
-<p>Find me in app/views/about/index.html.erb</p>
+<head>
+<h1>About</h1>
+</head>
+<body>
+<p><%= image_tag("poza.jpg", options = {:size => "600x600",:alt => "rss feed"}) %></p>
+<p>Proiect realizat in cadrul cursului de WebDev 2013</p>
+<p>Membrii echipei</p>
+<ul>
+	<li>Cristian Berceanu</li>
+	<li>Oana Radoi</li>
+	<li>Monica Mihailescu</li>
+	<li>Raluca Constanda</li>
+</ul>
+</body>
+
