--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,37 +1,53 @@
 <h1>Home</h1>
 
-<table border="1">
+<hr>
+<div>
+	<%= form_tag("/home/find", method: "get") do %>
+		<%= label_tag(:q, "Search for:") %>
+		<%= text_field_tag(:word) %>
+		<%= submit_tag "Find" %>
+	<% end %>
+
+
+</div>
+
+<hr>
+
+<table class="table table-hover">
 	<tr>
-		<td>
-			title
+		<td><b>
+			Title
+		</b>
 		</td>
-		<td>
-			album
+		
+		<td><b>
+			Album
+		</b>
 		</td>
-		<td>
-			artist
+		
+		<td><b>
+			Artist
+		</b>
 		</td>
-		<td>
-			genre
+		
+		<td><b>
+			Genre
+		</b>
 		</td>
-		<td>
-			track
+		
+		<td><b>
+			Track
+		
+		<td><b>
+			Year
+		</b>
 		</td>
-		<td>
-			year
-		</td>
-		<td>
-			Edit
-		</td>
-		<td>
-			Play
-		</td>
-		<td>
-			Download
-		</td>
-		<td>
-			Remove
-		</td>
+		
+		<td></td>
+		<td></td>
+		</td></td>
+		<td></td>
+		<td></td>
 	</tr>
 <% @songs.each do |song| %>
 	<tr>
@@ -71,12 +87,4 @@
 </table>
 
 
-<div>
-	<%= form_tag("/home/find", method: "get") do %>
-		<%= label_tag(:q, "Search for:") %>
-		<%= text_field_tag(:word) %>
-		<%= submit_tag "Find" %>
-	<% end %>
 
-
-</div>
