--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+
+
 <script>
         $( document ).ready(function() {
                 $('input[type="submit"]').addClass('btn btn-success');
@@ -26,7 +28,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Brand</a>
+    <div class="navbar-brand">MusicMix</div>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,7 +46,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "About" ,about_index_path %></li>
 	<% if(user_signed_in?) %>
-		<li class="active"> Welcome, <%= current_user.email  %></li>
+		<li class="active" style="padding-top:15px;"> Welcome, <%= current_user.email  %></li>
 		<li> <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
 	<% else %>
         	<li> <%= link_to "Sign in", new_user_registration_path  %></li>
