--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+<link rel="stylesheet" href="mediaelementplayer.css" />
+<script src="mediaelement-and-player.js"></script>
+<script src="jquery.js"></script>
+
 
 
 <script>
@@ -16,6 +20,7 @@
                 $('input[type="submit"]').addClass('btn btn-success');
         });
   </script>
+
 
 
 <nav class="navbar navbar-default" role="navigation" style="width:100%;">
