--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,10 @@
 </head>
 <body>
 
-<link rel="stylesheet" href="mediaelementplayer.css" />
-<script src="mediaelement-and-player.js"></script>
 <script src="jquery.js"></script>
+<link rel="stylesheet" href="mediaelementplayer.min.css" />
+<script src="mediaelement-and-player.min.js"></script>
+
 
 
 
