--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -14,4 +14,5 @@
 	<li>Monica Mihailescu</li>
 	<li>Raluca Constanda</li>
 </ul>
+<p> Organizator: <a href="http://www.rosedu.org"><strong> ROSEdu </strong> </a> </p>
 
