--- a/app/views/dashboard/edit.html.erb
+++ b/app/views/dashboard/edit.html.erb
@@ -1,3 +1,4 @@
+<p><strong>Editeaza datele melodiei</strong></p>
 <%= form_for @song2 , url: {action: "update"} do |song|  %>
 	<p>
 		<%= song.label :title %>
