--- a/app/views/searchbar/_create.html.erb
+++ b/app/views/searchbar/_create.html.erb
@@ -46,7 +46,7 @@
 		</td>
 		
 		<td>
-			<%= link_to "Play", dashboard_path(song.id) %>
+			<%= link_to "Play", searchbar_path(song.id) %>
 		</td>
 	</tr>
 <% end %>
