--- a/app/views/searchbar/show.html.erb
+++ b/app/views/searchbar/show.html.erb
@@ -5,3 +5,9 @@
 <script>
 $('audio').mediaelementplayer();
 </script>
+
+<%= form_for @comm , url: {action: "save_comm"} do |comm|  %>
+	<%= comm.text_field :content %>
+	<%= hidden_field_tag :song_id, @song.id %>
+	<%= comm.submit  "Comment" %>
+<% end %>
