--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,7 +1,7 @@
 
 <h1>About</h1>
 
-<p><%= image_tag("poza.jpg", options = {:size => "600x600",:alt => "rss feed"}) %></p>
+
 
 
 
@@ -14,4 +14,4 @@
 	<li>Monica Mihailescu</li>
 	<li>Raluca Constanda</li>
 </ul>
-
+About
