--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,17 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  
+  <style>
+  .poza{  background-image: url("/assets/fundal.jpg");
+        }
+      
+  </style>
+ 
 </head>
-<body>
+
+
+
+<body class="poza" style="color:white;">
 
 <link rel="stylesheet" href="mediaelementplayer.css" />
 <script src="mediaelement-and-player.js"></script>
@@ -17,7 +25,7 @@
 
 <script>
         $( document ).ready(function() {
-                $('input[type="submit"]').addClass('btn btn-success');
+                $('input[type="submit"]').addClass('btn btn-info');
         });
   </script>
 
@@ -33,20 +41,24 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <div class="navbar-brand">MusicMix</div>
+    <div><%= image_tag("logo.png", options = {:size => "100x70",:alt => "rss feed", padding:"false", margin:"false", border:"false"}) %></div>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li class="active"><%= link_to "Home" ,home_index_path %></li>
+    <ul class="nav navbar-nav" style="padding-top:10px;">
+      <li><%= link_to "Home" ,home_index_path %></li>
       <li><%= link_to "Dashboard" ,dashboard_index_path %></li>
     </ul>
       <%= form_tag({controller: "/searchbar", action: "create"}, method: "post", class: "navbar-form navbar-left") %>
+      <div style="padding-top:10px;">
       <div class="form-group">
         <input type="text" name="searchstring" class="form-control" placeholder="Search">
       </div>
+     
       <button type="submit" class="btn btn-default">Search</button>
+      </div>
+       
     </form>
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "About" ,about_index_path %></li>
