--- a/app/views/searchbar/index.html.erb
+++ b/app/views/searchbar/index.html.erb
@@ -1,28 +1,28 @@
 <h1>Search:</h1>
 
-<table border="1">
+<table class="table table-hover">
 	<tr>
 		<td>
-			title
+			Title
 		</td>
 		<td>
-			album
+			Album
 		</td>
 		<td>
-			artist
+			Artist
 		</td>
 		<td>
-			genre
+			Genre
 		</td>
 		<td>
 			track
 		</td>
 		<td>
-			year
+			Year
 		</td>
 		
 		<td>
-			Play
+			
 		</td>
 	</tr>
 <% @songs.each do |song| %>
