--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
       </div>
        
     </form>
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right" style="padding-top:10px;">
       <li><%= link_to "About" ,about_index_path %></li>
 	<% if(user_signed_in?) %>
 		<li class="active" style="padding-top:15px;"> Welcome, <%= current_user.email  %></li>
